--- a/proj4.css
+++ b/proj4.css
@@ -30,7 +30,7 @@ h1 {
 .pokemon-block-back {
   border-radius: 10px;
   padding: 10px;
-  background-color: white;
+  background-color: rgb(237, 173, 250);
   box-shadow: 0 3px 15px rgba(100, 100, 100, 0.5);
 }
 
